[gd_scene load_steps=12 format=3 uid="uid://bie4eo01i7boq"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_ky31f"]
[ext_resource type="PackedScene" uid="uid://cq6y8xomtxw74" path="res://Scenes/player.tscn" id="2_ayfde"]
[ext_resource type="Texture2D" uid="uid://d18yupoexk8jl" path="res://Art/sheet.png" id="3_cpitv"]
[ext_resource type="FontFile" uid="uid://cg0uvdl4ofqt8" path="res://Fonts/Xolonium-Regular.ttf" id="3_jv4og"]
[ext_resource type="Script" path="res://Scripts/ScoreLabel.gd" id="4_mn4vu"]
[ext_resource type="Texture2D" uid="uid://dywet286ktniq" path="res://Art/Backgrounds/bg-clouds.png" id="6_hrsex"]
[ext_resource type="Texture2D" uid="uid://71cb3gh55nfo" path="res://Art/Backgrounds/bg-mountains.png" id="7_25hia"]
[ext_resource type="Texture2D" uid="uid://bm25q0npduqeb" path="res://Art/Backgrounds/bg-trees.png" id="8_5hn4l"]
[ext_resource type="PackedScene" path="res://Scenes/enemy.tscn" id="10_sugn5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k8l3v"]
texture = ExtResource("3_cpitv")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
11:0/next_alternative_id = 3
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
13:0/next_alternative_id = 5
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
16:0/0 = 0
16:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
11:1/next_alternative_id = 3
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:1/0/physics_layer_0/angular_velocity = 0.0
13:1/next_alternative_id = 5
13:1/0 = 0
13:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:1/0/physics_layer_0/angular_velocity = 0.0
14:1/0 = 0
14:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:1/0/physics_layer_0/angular_velocity = 0.0
15:1/0 = 0
15:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:1/0/physics_layer_0/angular_velocity = 0.0
16:1/0 = 0
16:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:1/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
12:2/0 = 0
12:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:2/0/physics_layer_0/angular_velocity = 0.0
13:2/0 = 0
13:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:2/0/physics_layer_0/angular_velocity = 0.0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
14:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:2/0/physics_layer_0/angular_velocity = 0.0
15:2/0 = 0
15:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:2/0/physics_layer_0/angular_velocity = 0.0
16:2/0 = 0
16:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:2/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
12:3/0 = 0
12:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0 = 0
13:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:3/0 = 0
14:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:3/0/physics_layer_0/angular_velocity = 0.0
15:3/0 = 0
15:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:3/0/physics_layer_0/angular_velocity = 0.0
16:3/0 = 0
16:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:3/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
11:4/0 = 0
11:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:4/0/physics_layer_0/angular_velocity = 0.0
12:4/0 = 0
12:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:4/0/physics_layer_0/angular_velocity = 0.0
13:4/0 = 0
13:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:4/0/physics_layer_0/angular_velocity = 0.0
14:4/0 = 0
14:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:4/0/physics_layer_0/angular_velocity = 0.0
15:4/0 = 0
15:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:4/0/physics_layer_0/angular_velocity = 0.0
16:4/0 = 0
16:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:4/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
12:5/0 = 0
12:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:5/0/physics_layer_0/angular_velocity = 0.0
13:5/0 = 0
13:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:5/0/physics_layer_0/angular_velocity = 0.0
14:5/0 = 0
14:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:5/0/physics_layer_0/angular_velocity = 0.0
15:5/0 = 0
15:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:5/0/physics_layer_0/angular_velocity = 0.0
16:5/0 = 0
16:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:5/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
10:6/0 = 0
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
11:6/0 = 0
11:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:6/0/physics_layer_0/angular_velocity = 0.0
12:6/0 = 0
12:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:6/0/physics_layer_0/angular_velocity = 0.0
13:6/0 = 0
13:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:6/0/physics_layer_0/angular_velocity = 0.0
14:6/0 = 0
14:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:6/0/physics_layer_0/angular_velocity = 0.0
15:6/0 = 0
15:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:6/0/physics_layer_0/angular_velocity = 0.0
16:6/0 = 0
16:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:6/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_2y3f6"]
physics_layer_0/collision_layer = 1
sources/3 = SubResource("TileSetAtlasSource_k8l3v")

[node name="World" type="Node2D"]
script = ExtResource("1_ky31f")

[node name="Player" parent="." instance=ExtResource("2_ayfde")]
position = Vector2(210, 431)
scale = Vector2(3, 3)
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 1.0
offset_right = 40.0
offset_bottom = 41.0
scale = Vector2(30.4, 16.12)
expand_mode = 1

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_jv4og")
theme_override_font_sizes/font_size = 60
text = "Test Font
"
script = ExtResource("4_mn4vu")

[node name="GameOverHUD" type="CanvasLayer" parent="."]

[node name="GameOverLabel" type="Label" parent="GameOverHUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_jv4og")
theme_override_font_sizes/font_size = 60
text = "Game Over
"

[node name="Button" type="Button" parent="GameOverHUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.5
offset_top = -218.0
offset_right = 40.5
offset_bottom = -187.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_jv4og")
theme_override_font_sizes/font_size = 50
text = "Try Again"

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(61, 415)

[node name="TileMap" type="TileMap" parent="." groups=["thing"]]
position = Vector2(-1, 4)
scale = Vector2(4.05307, 4.14234)
tile_set = SubResource("TileSet_2y3f6")
format = 2
layer_0/tile_data = PackedInt32Array(458753, 720899, 0, 458754, 720899, 0, 458755, 720899, 0, 458756, 720899, 0, 458757, 720899, 0, 458758, 720899, 0, 458759, 720899, 0, 458760, 720899, 0, 458761, 720899, 0, 458762, 720899, 0, 458763, 720899, 0, 458764, 720899, 0, 458765, 720899, 0, 458766, 720899, 0, 458767, 720899, 0, 458768, 720899, 0, 458769, 720899, 0, 458752, 720899, 0, 524288, 720899, 1, 589824, 720899, 1, 524289, 720899, 1, 524290, 720899, 1, 589826, 720899, 1, 589825, 720899, 1, 524291, 720899, 1, 524292, 720899, 1, 524293, 720899, 1, 524294, 720899, 1, 524295, 720899, 1, 524296, 720899, 1, 524297, 720899, 1, 524298, 720899, 1, 524299, 720899, 1, 524300, 720899, 1, 524301, 720899, 1, 524302, 720899, 1, 524303, 720899, 1, 524304, 720899, 1, 524305, 720899, 1, 589841, 720899, 1, 589840, 720899, 1, 589839, 720899, 1, 589838, 720899, 1, 589837, 720899, 1, 589836, 720899, 1, 589835, 720899, 1, 589834, 720899, 1, 589833, 720899, 1, 589832, 720899, 1, 589831, 720899, 1, 589830, 720899, 1, 589829, 720899, 1, 589828, 720899, 1, 589827, 720899, 1, 458770, 720899, 0, 524306, 720899, 1, 589842, 720899, 1, 393228, 917507, 5, 393229, 917507, 5, 393220, 917507, 5, 393221, 917507, 5, 131086, 3, 1, 65552, 131075, 0, 131088, 131075, 1, 196624, 3, 0, 65553, 196611, 0, 131089, 196611, 1, 196625, 196611, 2, 262161, 196611, 3, 327697, 196611, 4, 393233, 196611, 5, 65554, 262147, 0, 131090, 262147, 1, 196626, 262147, 2, 262162, 262147, 3, 327698, 262147, 4, 393234, 262147, 5, 65555, 327683, 0, 131091, 327683, 1, 262163, 327683, 3, 327699, 327683, 4, 65556, 393219, 0, 17, 3, 0, 327696, 3, 0, 458771, 720899, 0, 524307, 720899, 1, 589843, 720899, 1, 524308, 720899, 1, 589844, 720899, 1, 524309, 720899, 1, 589845, 720899, 1, 524310, 720899, 1, 589846, 720899, 1, 524311, 720899, 1, 589847, 720899, 1, 524312, 720899, 1, 589848, 720899, 1, 524313, 720899, 1, 589849, 720899, 1, 524314, 720899, 1, 589850, 720899, 1, 524315, 720899, 1, 589851, 720899, 1, 524316, 720899, 1, 589852, 720899, 1, 524317, 720899, 1, 589853, 720899, 1, 524318, 720899, 1, 589854, 720899, 1, 524319, 720899, 1, 589855, 720899, 1, 524320, 720899, 1, 589856, 720899, 1, 458772, 720899, 0, 458773, 720899, 0, 458774, 720899, 0, 458775, 720899, 0, 458776, 720899, 0, 458777, 720899, 0, 458778, 720899, 0, 458779, 720899, 0, 458780, 720899, 0, 458781, 720899, 0, 458782, 720899, 0, 458783, 720899, 0, 458784, 720899, 0, 393236, 917507, 5, 393243, 917507, 5, 393241, 917507, 5, 393239, 917507, 5, 393245, 196611, 7, 524321, 720899, 1, 589857, 720899, 1, 393249, 851971, 2, 393247, 327683, 7, 393242, 1048579, 6, 458785, 458755, 3, 26, 3, 1, -65508, 131075, 0, 28, 131075, 1, 65564, 131075, 2, 393244, 131075, 7, -65507, 196611, 0, 29, 196611, 1, 65565, 196611, 2, 131101, 196611, 3, 196637, 196611, 4, 262173, 196611, 5, 327709, 196611, 6, -65506, 262147, 0, 30, 262147, 1, 65566, 262147, 2, 131102, 262147, 3, 196638, 262147, 4, 262174, 262147, 5, 327710, 262147, 6, 393246, 262147, 7, -65505, 327683, 0, 31, 327683, 1, 131103, 327683, 3, 196639, 327683, 4, 655369, 720899, 1, 655368, 720899, 1, 655367, 720899, 1, 655366, 720899, 1, 655363, 720899, 1, 655362, 720899, 1)

[node name="CloudTimer" type="Timer" parent="."]
wait_time = 1.484
autostart = true

[node name="CloudSpawnWest" type="Node2D" parent="."]
position = Vector2(-15, 134)

[node name="CloudSpawnEast" type="Node2D" parent="."]
position = Vector2(1191, 64)

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1600, 2560)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(320, 240)
scale = Vector2(10, 10)
texture = ExtResource("6_hrsex")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1600, 2560)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(320, 240)
scale = Vector2(10, 10)
texture = ExtResource("7_25hia")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1600, 2560)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(320, 240)
scale = Vector2(10, 10)
texture = ExtResource("8_5hn4l")

[node name="Enemy" parent="." instance=ExtResource("10_sugn5")]
position = Vector2(1669, 430)
scale = Vector2(3, 3)

[connection signal="pressed" from="GameOverHUD/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="CloudTimer" to="." method="_on_cloud_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
